--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^2.2.3",
-    "astro": "^2.5.5"
+    "@astrojs/netlify": "^6.4.0",
+    "@astrojs/vue": "^5.1.0",
+    "astro": "^5.10.0",
+    "axios": "^1.10.0",
+    "vue": "^3.5.17"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
