--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/netlify": "^6.4.0",
     "@astrojs/vue": "^5.1.0",
+    "@tanstack/vue-query": "^5.81.0",
+    "@tanstack/vue-query-devtools": "^5.81.0",
     "astro": "^5.10.0",
     "axios": "^1.10.0",
     "vue": "^3.5.17"
